change author name and make deprecation messages clearer

--- a/pfa-specification-source.tex
+++ b/pfa-specification-source.tex
@@ -37,7 +37,7 @@
 \renewcommand{\arraystretch}{1.4}
 
 \title{PFA: Portable Format for Analytics (version 0.8.0)}
-\author{Jim Pivarski}
+\author{Data Mining Group --- PFA Working Group}
 \date{\today}
 
 \input{libfcns}
